Diktat 2.0 support
### What's done:
- updated diktat to 2.0.0